# welfare_service

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  config.toml.example  start.sh  stop.sh
data/: welfare.db  welfare.db-shm  welfare.db-wal
docs/: 2026-06-16-welfare-service-design.md
docs/superpowers/specs/: 2026-06-18-pool-key-card-view-design.md  2026-06-19-active-keys-display-design.md  2026-06-19-health-score-grid-design.md  2026-06-19-usage-stats-design.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-vue/: package-lock.json  package.json
frontend-vue/data/: welfare.db-shm  welfare.db-wal
frontend-vue/src/: App.vue  main.ts
frontend-vue/src/api/: admin.ts  chat.ts  index.ts
frontend-vue/src/components/: AccessKeysTable.vue  ActiveKeysBar.vue  AddPoolKeyModal.vue  ChatTest.vue  CreateAccessKeyModal.vue  EditAccessKeyModal.vue  EditPoolKeyModal.vue  (+8 more)
frontend/src/: App.tsx  App.vue  main.tsx
src/: cli.rs  config.rs  crypto.rs  error.rs  health_score_cache.rs  main.rs  state.rs  usage_cache.rs
src/db/: access_keys.rs  health_score.rs  keys.rs  logs.rs  mod.rs  models.rs  runtime_state.rs  usage.rs
src/health/: checker.rs
src/proxy/: forwarder.rs  mod.rs  orchestrator.rs  stream.rs
src/scheduler/: circuit_breaker.rs  cooldown.rs  mod.rs  selector.rs  token_bucket.rs
src/server/: mod.rs  routes.rs
static/assets/: index-C08CHZAy.css  index-C4xsP83e.js  index-DN6APv_7.css  index-dn_nbbZW.js  vendor-antd-BhgV5vCw.js  vendor-antd-BiGcWGSB.js  vendor-echarts-BxdsljFX.js  vendor-echarts-CyRm93xD.js
(+52 files in other folders)
