[package]
name = "welfare-service"
version = "0.1.0"
edition = "2021"
description = "API Key pool sharing service for Linux.do community"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (使用 rustls 避免系统 OpenSSL 依赖)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

# Database
rusqlite = { version = "0.33", features = ["bundled", "chrono"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Encryption
aes-gcm = "0.10"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
bytes = "1"
futures = "0.3"
parking_lot = "0.12"

[profile.release]
lto = true
codegen-units = 1
